feat: Add authenticate function
